# demo_todo_drf_react

./: .env_example  .tool-versions  Dockerfile.back  Dockerfile.front  Makefile  README.md  docker-compose.yaml  nginx.conf
back/: entrypoint.sh  pyproject.toml  pytest.ini
back/config/: routers.py  settings.py  urls.py
back/todo_app/: admin.py  conftest.py  filters.py  models.py  permissions.py  schema.py  serializers.py  views.py
back/todo_app/migrations/: 0001_initial.py
back/users_app/: admin.py  models.py  serializers.py  views.py
back/users_app/migrations/: 0001_initial.py
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: settings.py  urls.py
backend/authentication/: admin.py  models.py  serializers.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/config/: auth.py  base.py  database.py  internationalization.py  settings.py  storage.py  templates.py
backend/todo_app/: admin.py  conftest.py  models.py  permissions.py  schema.py  serializers.py  tests.py  views.py
backend/todo_app/migrations/: 0002_alter_todo_options_remove_todo_users_todo_users.py  0003_alter_todo_users.py  0004_task_remove_todo_created_by_remove_todo_project_and_more.py  0005_remove_task_users_task_user.py  0006_alter_project_title_alter_task_title.py  0007_alter_project_user_alter_task_project_and_more.py
front/: package-lock.json  package.json
front/src/: App.jsx  main.jsx  router.jsx
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  router.jsx
(+53 files in other folders)
